bdr.BDR2.scala.error
Erreur de compilation :
BDR2:4: error: value | is not a member of Unit
    case "R" => droite()|avance()
                        ^BDR2:5: error: value | is not a member of Unit
    case "L" => gauche()|avance()
                        ^